Added first bits of js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
       rel="stylesheet"
     />
   </head>
-
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="menu">
+        <div class="settings_field button">
+          <p>start</p>
+        </div>
+        <div class="settings_field slider height">
+          <p>height</p>
+          <div id="height_sl" class="slider_box">
+            <div class="slider_ind">
+              <p>5</p>
+            </div>
+          </div>
+        </div>
+        <div class="settings_field slider">
+          <p>width</p>
+          <div id="width_sl" class="slider_box">
+            <div class="slider_ind">
+              <p>5</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="js/main.js"></script>
 </html>
