--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- <input type="range" name="" id="" /> -->
     <div class="container">
       <div class="menu">
         <div class="settings_field button">
@@ -22,17 +23,17 @@
         </div>
         <div class="settings_field slider height">
           <p>height</p>
-          <div id="height_sl" class="slider_box">
-            <div class="slider_ind">
+          <div id="sliderh" class="slider_box">
+            <div id="texth" class="slider_ind">
               <p>5</p>
             </div>
           </div>
         </div>
-        <div class="settings_field slider">
+        <div class="settings_field slider width">
           <p>width</p>
-          <div id="width_sl" class="slider_box">
-            <div class="slider_ind">
-              <p>5</p>
+          <div id="sliderw" class="slider_box">
+            <div id="textw" class="slider_ind">
+              <p>4</p>
             </div>
           </div>
         </div>
