--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
           <p>start</p>
         </div>
         <div class="settings_field slider height">
-          <p>height</p>
+          <div class="slider_text">
+            <p>height</p>
+            <p id="texth">6</p>
+          </div>
           <div id="sliderh" class="slider_box">
-            <div id="texth" class="slider_ind">
-              <p>5</p>
-            </div>
+            <div class="slider_ind"></div>
           </div>
         </div>
         <div class="settings_field slider width">
-          <p>width</p>
+          <div class="slider_text">
+            <p>width</p>
+            <p id="textw">5</p>
+          </div>
           <div id="sliderw" class="slider_box">
-            <div id="textw" class="slider_ind">
-              <p>4</p>
-            </div>
+            <div class="slider_ind"></div>
           </div>
         </div>
       </div>
