Finally managed to transfer columns and rows

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- <input type="range" name="" id="" /> -->
     <div class="container">
-      <div class="menu">
+      <div class="menu" id="menu">
         <div class="settings_field button buttons">
           <p>start</p>
         </div>
@@ -30,7 +30,7 @@
             <p>height</p>
             <p id="texth">6</p>
           </div>
-          <div id="sliderh" class="slider_box">
+          <div id="sliderh" class="slider_box" data-rows="5" data-columns="6">
             <div class="slider_ind"></div>
           </div>
         </div>
