Finished coloring, need to make winnable

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="wordle inactive">
-        <i class="buttons icon arrow fa-solid fa-arrow-right"></i>
+        <i id="backb" class="buttons icon arrow fa-solid fa-arrow-right"></i>
         <div id="wordle" class="grid"></div>
       </div>
     </div>
