Trying to make UI look better

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- <input type="range" name="" id="" /> -->
-    <div class="container">
+    <div id="container" class="container">
       <div class="menu" id="menu">
         <div id="startb" class="settings_field button buttons">
           <p>start</p>
