Fixed the start menu

--- a/index.html
+++ b/index.html
@@ -20,28 +20,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <!-- <input type="range" name="" id="" /> -->
-    <div id="container" class="container">
-      <div class="menu" id="menu">
-        <div id="startb" class="settings_field button buttons">
-          <p>start</p>
-        </div>
-        <div class="settings_field slider height">
-          <div class="slider_text">
-            <p>height</p>
-            <p id="texth">6</p>
+    <div class="-grid2">
+      <div class="menu_con">
+        <div class="menu" id="menu">
+          <div id="startb" class="settings_field button buttons">
+            <p>start</p>
           </div>
-          <div id="sliderh" class="slider_box" data-rows="5" data-columns="6">
-            <div class="slider_ind"></div>
+          <div class="settings_field slider height">
+            <div class="slider_text">
+              <p>height</p>
+              <p id="texth">6</p>
+            </div>
+            <div id="sliderh" class="slider_box" data-rows="5" data-columns="6">
+              <div class="slider_ind"></div>
+            </div>
           </div>
-        </div>
-        <div class="settings_field slider width">
-          <div class="slider_text">
-            <p>width</p>
-            <p id="textw">5</p>
-          </div>
-          <div id="sliderw" class="slider_box">
-            <div class="slider_ind"></div>
+          <div class="settings_field slider width">
+            <div class="slider_text">
+              <p>width</p>
+              <p id="textw">5</p>
+            </div>
+            <div id="sliderw" class="slider_box">
+              <div class="slider_ind"></div>
+            </div>
           </div>
         </div>
       </div>
