starting to remove array

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </div>
         </div>
       </div>
-      <div class="wordle inactive">
-        <i id="backb" class="buttons icon arrow fa-solid fa-arrow-right"></i>
+      <div class="wordle">
+        <i id="backb" class="buttons icon arrow fa-solid fa-arrow-left"></i>
         <div id="wordle" class="grid"></div>
       </div>
     </div>
