Fixed being able to click start while animation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div id="startb" class="settings_field button buttons">
             <p>start</p>
           </div>
-          <div class="settings_field slider height">
+          <div class="settings_field slider height" id="height">
             <div class="slider_text">
               <p>height</p>
               <p id="texth">6</p>
@@ -35,7 +35,7 @@
               <div class="slider_ind"></div>
             </div>
           </div>
-          <div class="settings_field slider width">
+          <div class="settings_field slider width" id="width">
             <div class="slider_text">
               <p>width</p>
               <p id="textw">5</p>
