added first victory animation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="wordle">
+      <div class="wordle" id="big_wordle">
         <i id="backb" class="buttons icon arrow fa-solid fa-arrow-left"></i>
         <div id="wordle" class="grid"></div>
       </div>
