added lose screen and made prettier

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div id="darkButton">
       <div id="darkDisplay">
-        <i class="light-icon fa-regular fa-lightbulb"></i>
+        <i class="light-icon fa-regular fa-moon"></i>
       </div>
     </div>
     </div>
@@ -59,6 +59,7 @@
         <i id="backb" class="buttons icon arrow fa-solid fa-arrow-left"></i>
         <div id="wordle" class="grid"></div>
         <p id="winText">You won!</p>
+        <p id="bottomText">You lost!</p>
       </div>
     </div>
   </body>
